--- a/interacoes.html
+++ b/interacoes.html
@@ -501,7 +501,7 @@
         </div>
         <div class="content">
             <div class="row">
-                <div class="col-area area-msg division-2">
+                <div class="col-area area-msg division-4">
                     <div class="hd">
                         <h5 class="contact-data"><i class="favorite fas fa-star"></i> William Oliveira<span>11 99105 4384</span><span>ID: 13214</span></h5>
                         <ul class="nav-icon">
@@ -879,7 +879,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-area area-add-right research hide">
+                <div class="col-area area-add-right research">
                     <div class="hdr">
                         <p>Pesquisar na Conversa</p>
                         <button class="btn btn-sn btn-default btn-close" id="btnCloseResearch">
@@ -986,7 +986,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-area area-add-right contact hide">
+                <div class="col-area area-add-right contact">
                     <div class="hdr">
                         <p>William Oliveira</p>
                         <button class="btn btn-sn btn-default btn-close" id="btnCloseContact">
