Combo na parte superior das mensagens

--- a/interacoes.html
+++ b/interacoes.html
@@ -524,6 +524,13 @@
                                 <li><a href="">Transferir</a></li>
                                 <li><a href="">Conferência</a></li>
                             </ul>
+
+                            <select class="select-queue">
+                                <option value="" selected>Fila XPTO</option>
+                                <option value="">Fila 123</option>
+                                <option value="">Fila Sei lá do que</option>
+                                <option value="">Fila 4</option>
+                            </select>
                         </div>
                         <ul class="list-info">
                             <li>
