Fila ao lado da mensagem

--- a/interacoes.html
+++ b/interacoes.html
@@ -874,6 +874,13 @@
                         </div>
                     </div>
                     <div class="toolsbar-msg">
+                        <button class="btn btn-sm btn-which"><i class="fas fa-chevron-up"></i></button>
+                        <ul class="toggle-action">
+                            <li><a href="">Fila de Atendimento</a></li>
+                            <li class="active"><a href="">Fila de Ocorrência</a></li>
+                            <li><a href="">Fila de Status</a></li>
+                        </ul>
+
                         <div class="textbox">
                             <textarea class="send-new-msg" placeholder="Digite uma mensagem"></textarea>
                             <button class="send"><i class="fas fa-share-square"></i></button>
