Dentro do balão da mensagem

--- a/interacoes.html
+++ b/interacoes.html
@@ -614,6 +614,11 @@
                                 <div class="box-msg msg-operator">
                                     <p>Lorem Ipsum</p>
                                     <span class="time-msg sent">11:37</span>
+                                    <div class="row info-operador">
+                                        <p class="operador-name">Francisco Socorro Sophie</p>
+                                        <p class="atendimento">#234349324</p>
+                                        <p class="fila">Fila de Status do pedido</p>
+                                    </div>
                                 </div>
                             </div>
 
