--- a/interacoes.html
+++ b/interacoes.html
@@ -579,6 +579,7 @@
                                             <li class="detailMsg">Detalhes da mensagem</li>
                                         </ul>
                                     </button> 
+                                    <!-- Mensagem já respondida -->
                                     <div class="progress-pl answered">
                                         <div class="progress-pl-bar" style="width: 100%">
                                             <div class="timer-prgress">00:58</div>
@@ -602,6 +603,7 @@
                                             <li class="detailMsg">Detalhes da mensagem</li>
                                         </ul>
                                     </button> 
+                                    <!-- Mensagem não respondida -->
                                     <div class="progress-pl">
                                         <div class="progress-pl-bar" style="width: 50%">
                                             <div class="timer-prgress">00:58</div>
