Botão adicionar contato ao grupo

--- a/interacoes.html
+++ b/interacoes.html
@@ -896,7 +896,7 @@
                             <li><a href=""><i class="fas fa-microphone"></i></a></li>
                             <li><a href=""><i class="far fa-grin-beam"></i></a></li>
                             <li><a href=""><i class="fas fa-paperclip"></i></a></li>
-                            <li><a href=""><i class="fas fa-user-plus"></i></a></li>
+                            <!--li><a href=""><i class="fas fa-user-plus"></i></a></li-->
                         </ul>
                     </div>
                 </div>
@@ -1047,6 +1047,12 @@
                                         <strong>Status do Atendimento</strong>
                                         <span>Henrique Pinheiro, João Paulo, Arnaldo Cezar Coelho, Fulnao de Tal</span>
                                     </p>
+                                </li>
+                                <li class="add-group-contact">
+                                    <span class="circle">
+                                        <i class="fas fa-user-plus"></i>
+                                    </span>
+                                    <div class="txt">Adicionar a um Novo Grupo</div>
                                 </li>
                             </ul>
                         </div>
