Deverá ter um botão para identificar

--- a/interacoes.html
+++ b/interacoes.html
@@ -503,7 +503,7 @@
             <div class="row">
                 <div class="col-area area-msg division-4">
                     <div class="hd">
-                        <h5 class="contact-data"><i class="favorite fas fa-star"></i> William Oliveira<span>11 99105 4384</span><span>ID: 13214</span></h5>
+                        <h5 class="contact-data"><span class="new-contact"><i class="fas fa-plus"></i></span> <i class="favorite fas fa-star"></i> William Oliveira<span>11 99105 4384</span><span>ID: 13214</span></h5>
                         <ul class="nav-icon">
                             <li id="searchCont"><i class="fas fa-search"></i></li>
                             <li id="knowledgeLink"><i class="fas fa-brain"></i></li>
