--- a/interacoes.html
+++ b/interacoes.html
@@ -1056,6 +1056,17 @@
                                 </li>
                             </ul>
                         </div>
+                        <div class="ib-gp">
+                            <h4>Mais Informações</h4>
+                            <ul class="list-group-contact">
+                                <li class="add-group-contact">
+                                    <span class="circle">
+                                        <i class="fas fa-plus"></i>
+                                    </span>
+                                    <div class="txt">Adicionar Campanha</div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="col-area area-add-right rank hide">
