Adicionar contato ao grupo

--- a/interacoes.html
+++ b/interacoes.html
@@ -48,7 +48,7 @@
                     </div>
                 </div>
                 <div class="tab-content">
-                    <ul id="contact" class="tab-pane in active">
+                    <ul id="contact" class="tab-pane in active remove-partaker-group">
                         <li class="newmsg">
                             <span class="circle">
                                 <i class="fas fa-edit"></i>
@@ -406,7 +406,7 @@
                             </div>
                         </li>
                     </ul>
-                    <ul id="group" class="tab-pane">
+                    <ul id="group" class="tab-pane remove-partaker-group">
                         <li class="newmsg">
                             <span class="circle">
                                 <i class="fas fa-user-plus"></i>
@@ -490,6 +490,210 @@
                                         <div class="col-sm-12">
                                             <p class="channel"><strong>Fila:</strong> Início 2 • <strong>SLA:</strong>
                                                 <span class="danger">00:12:58</span> • <strong>Canal:</strong> WebChat</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                    <ul id="add-group" class="tab-pane add-partaker-group">
+                        <li class="lyrics-alpha">A</li>
+                        <li class="cont">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <div class="checkbox checkbox-primary check-user">
+                                        <input id="checkbox2" type="checkbox" checked="">
+                                    </div>
+                                    <span class="circle inital">AF</span>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <h5 class="name">Aline Ferreira
+                                                <span class="time">12:02</span>
+                                            </h5>
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="cont">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <div class="checkbox checkbox-primary check-user">
+                                        <input id="checkbox2" type="checkbox" checked="">
+                                    </div>
+                                    <span class="circle inital">AM</span>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <h5 class="name">André Meira
+                                                <span class="time">12:02</span>
+                                            </h5>
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="cont">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <div class="checkbox checkbox-primary check-user">
+                                        <input id="checkbox2" type="checkbox" checked="">
+                                    </div>
+                                    <span class="circle inital">AC</span>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <h5 class="name">Arnaldo Cezar Coelho
+                                                <span class="time">12:02</span>
+                                            </h5>
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="lyrics-alpha">B</li>
+                        <li class="cont">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <div class="checkbox checkbox-primary check-user">
+                                        <input id="checkbox2" type="checkbox" checked="">
+                                    </div>
+                                    <span class="circle inital">BS</span>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <h5 class="name">Bruno Santana
+                                                <span class="time">12:02</span>
+                                            </h5>
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="lyrics-alpha">C</li>
+                        <li class="cont">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <div class="checkbox checkbox-primary check-user">
+                                        <input id="checkbox2" type="checkbox" checked="">
+                                    </div>
+                                    <span class="circle inital">CV</span>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <h5 class="name">Camila Vasconcelos
+                                                <span class="time">12:02</span>
+                                            </h5>
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="cont">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <div class="checkbox checkbox-primary check-user">
+                                        <input id="checkbox2" type="checkbox" checked="">
+                                    </div>
+                                    <span class="circle inital">CC</span>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <h5 class="name">Camilo Cordeiro
+                                                <span class="time">12:02</span>
+                                            </h5>
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="lyrics-alpha">D</li>
+                        <li class="cont">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <div class="checkbox checkbox-primary check-user">
+                                        <input id="checkbox2" type="checkbox" checked="">
+                                    </div>
+                                    <span class="circle inital">DG</span>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <h5 class="name">Daniela Gomes
+                                                <span class="time">12:02</span>
+                                            </h5>
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="cont">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <div class="checkbox checkbox-primary check-user">
+                                        <input id="checkbox2" type="checkbox" checked="">
+                                    </div>
+                                    <span class="circle inital">DR</span>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <h5 class="name">Danilo Rodrigues
+                                                <span class="time">12:02</span>
+                                            </h5>
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="cont">
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <div class="checkbox checkbox-primary check-user">
+                                        <input id="checkbox2" type="checkbox" checked="">
+                                    </div>
+                                    <span class="circle inital">DS</span>
+                                </div>
+                                <div class="col-sm-9">
+                                    <div class="row">
+                                        <div class="col-sm-12">
+                                            <h5 class="name">Diego Schmitt
+                                                <span class="time">12:02</span>
+                                            </h5>
+                                        </div>
+                                        <div class="col-sm-12">
+                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
                                         </div>
                                     </div>
                                 </div>
