--- a/interacoes.html
+++ b/interacoes.html
@@ -699,6 +699,10 @@
                                 </div>
                             </div>
                         </li>
+                        <li class="box-next">
+                            <input type="text" class="full-x" placeholder="Nome do Grupo" id="nameGroup">
+                            <button class="btn btn-sm btn-pink full-x">Concluir</button>
+                        </li>
                     </ul>
                 </div>
             </div>
