Modal de novo grupo

--- a/interacoes.html
+++ b/interacoes.html
@@ -15,6 +15,45 @@
 
 <body>
     <div id="interactions">
+        <div class="modal-group">
+            <div class="modal-wrapper">
+                <div class="row">
+                    <div class="col-sm-9 no-padding">
+                        <h4>Novo Grupo</h4>
+                    </div>
+                    <div class="col-sm-3 no-padding">
+                        <button type="button" class="btn btn-sm btn-default btn-close"><i class="fas fa-times"></i></button>
+                    </div>
+                </div>
+                <div class="row modal-main md-xp">
+                    <div class="col-sm-12 no-padding">
+                        <p>Nome da Fila</p>
+                    </div>
+                    <div class="col-sm-12 no-padding">
+                        <select class="select-fila">
+                            <option value="" selected>Fila XPTO</option>
+                            <option value="">Fila 123</option>
+                            <option value="">Fila Sei lá do que</option>
+                            <option value="">Fila 4</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="row modal-main">
+                    <div class="col-sm-12 no-padding">
+                        <p>Nome do Grupo</p>
+                    </div>
+                    <div class="col-sm-12 no-padding">
+                        <input type="text" placeholder="Escreva aqui" class="txt-fila">
+                    </div>
+                </div>
+                <div class="row modal-main">
+                    <div class="col-sm-8 no-padding"></div>
+                    <div class="col-sm-4 no-padding">
+                        <button type="button" class="btn btn-sm btn-default btn-f">Concluir</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="left-sb">
             <div class="settings">
                 <ul>
@@ -48,7 +87,7 @@
                     </div>
                 </div>
                 <div class="tab-content">
-                    <ul id="contact" class="tab-pane in active remove-partaker-group">
+                    <ul id="contact" class="tab-pane in active">
                         <li class="newmsg">
                             <span class="circle">
                                 <i class="fas fa-edit"></i>
@@ -406,7 +445,7 @@
                             </div>
                         </li>
                     </ul>
-                    <ul id="group" class="tab-pane remove-partaker-group">
+                    <ul id="group" class="tab-pane">
                         <li class="newmsg">
                             <span class="circle">
                                 <i class="fas fa-user-plus"></i>
@@ -494,214 +533,6 @@
                                     </div>
                                 </div>
                             </div>
-                        </li>
-                    </ul>
-                    <ul id="add-group" class="tab-pane add-partaker-group">
-                        <li class="lyrics-alpha">A</li>
-                        <li class="cont">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="checkbox checkbox-primary check-user">
-                                        <input id="checkbox2" type="checkbox" checked="">
-                                    </div>
-                                    <span class="circle inital">AF</span>
-                                </div>
-                                <div class="col-sm-9">
-                                    <div class="row">
-                                        <div class="col-sm-12">
-                                            <h5 class="name">Aline Ferreira
-                                                <span class="time">12:02</span>
-                                            </h5>
-                                        </div>
-                                        <div class="col-sm-12">
-                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="cont">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="checkbox checkbox-primary check-user">
-                                        <input id="checkbox2" type="checkbox" checked="">
-                                    </div>
-                                    <span class="circle inital">AM</span>
-                                </div>
-                                <div class="col-sm-9">
-                                    <div class="row">
-                                        <div class="col-sm-12">
-                                            <h5 class="name">André Meira
-                                                <span class="time">12:02</span>
-                                            </h5>
-                                        </div>
-                                        <div class="col-sm-12">
-                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="cont">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="checkbox checkbox-primary check-user">
-                                        <input id="checkbox2" type="checkbox" checked="">
-                                    </div>
-                                    <span class="circle inital">AC</span>
-                                </div>
-                                <div class="col-sm-9">
-                                    <div class="row">
-                                        <div class="col-sm-12">
-                                            <h5 class="name">Arnaldo Cezar Coelho
-                                                <span class="time">12:02</span>
-                                            </h5>
-                                        </div>
-                                        <div class="col-sm-12">
-                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="lyrics-alpha">B</li>
-                        <li class="cont">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="checkbox checkbox-primary check-user">
-                                        <input id="checkbox2" type="checkbox" checked="">
-                                    </div>
-                                    <span class="circle inital">BS</span>
-                                </div>
-                                <div class="col-sm-9">
-                                    <div class="row">
-                                        <div class="col-sm-12">
-                                            <h5 class="name">Bruno Santana
-                                                <span class="time">12:02</span>
-                                            </h5>
-                                        </div>
-                                        <div class="col-sm-12">
-                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="lyrics-alpha">C</li>
-                        <li class="cont">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="checkbox checkbox-primary check-user">
-                                        <input id="checkbox2" type="checkbox" checked="">
-                                    </div>
-                                    <span class="circle inital">CV</span>
-                                </div>
-                                <div class="col-sm-9">
-                                    <div class="row">
-                                        <div class="col-sm-12">
-                                            <h5 class="name">Camila Vasconcelos
-                                                <span class="time">12:02</span>
-                                            </h5>
-                                        </div>
-                                        <div class="col-sm-12">
-                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="cont">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="checkbox checkbox-primary check-user">
-                                        <input id="checkbox2" type="checkbox" checked="">
-                                    </div>
-                                    <span class="circle inital">CC</span>
-                                </div>
-                                <div class="col-sm-9">
-                                    <div class="row">
-                                        <div class="col-sm-12">
-                                            <h5 class="name">Camilo Cordeiro
-                                                <span class="time">12:02</span>
-                                            </h5>
-                                        </div>
-                                        <div class="col-sm-12">
-                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="lyrics-alpha">D</li>
-                        <li class="cont">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="checkbox checkbox-primary check-user">
-                                        <input id="checkbox2" type="checkbox" checked="">
-                                    </div>
-                                    <span class="circle inital">DG</span>
-                                </div>
-                                <div class="col-sm-9">
-                                    <div class="row">
-                                        <div class="col-sm-12">
-                                            <h5 class="name">Daniela Gomes
-                                                <span class="time">12:02</span>
-                                            </h5>
-                                        </div>
-                                        <div class="col-sm-12">
-                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="cont">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="checkbox checkbox-primary check-user">
-                                        <input id="checkbox2" type="checkbox" checked="">
-                                    </div>
-                                    <span class="circle inital">DR</span>
-                                </div>
-                                <div class="col-sm-9">
-                                    <div class="row">
-                                        <div class="col-sm-12">
-                                            <h5 class="name">Danilo Rodrigues
-                                                <span class="time">12:02</span>
-                                            </h5>
-                                        </div>
-                                        <div class="col-sm-12">
-                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="cont">
-                            <div class="row">
-                                <div class="col-sm-3">
-                                    <div class="checkbox checkbox-primary check-user">
-                                        <input id="checkbox2" type="checkbox" checked="">
-                                    </div>
-                                    <span class="circle inital">DS</span>
-                                </div>
-                                <div class="col-sm-9">
-                                    <div class="row">
-                                        <div class="col-sm-12">
-                                            <h5 class="name">Diego Schmitt
-                                                <span class="time">12:02</span>
-                                            </h5>
-                                        </div>
-                                        <div class="col-sm-12">
-                                            <p class="msg"><strong>Último contato:</strong> 12/12/2018 às 19:39:32</p>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="box-next">
-                            <input type="text" class="full-x" placeholder="Nome do Grupo" id="nameGroup">
-                            <button class="btn btn-sm btn-pink full-x">Concluir</button>
                         </li>
                     </ul>
                 </div>
